Add IntelliJ files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
 config/database.yml
+
+# IntelliJ files
+/abt.iml
+/.idea
+/.rakeTasks
+/.generators
+
