--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@ config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
 config/database.yml
+
+# IntelliJ files
+/abt.iml
+/.idea
+/.rakeTasks
+/.generators
+
