Support not having a payment URL

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,2 +1,3 @@
 payments:
-  public_url: 'https://pay.deduktiva.com/p/%token%'
+#  public_url: 'https://pay.deduktiva.com/p/%token%'
+  public_url: ''
