--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -7,8 +7,8 @@ company:
   vat_id: ATUxxxxxxx
 
 fop:
-  # Wrapper for macOS using Podman (run script/setup-fop.sh first)
-  binary_path: "bin/fop"
+  # Use podman wrapper (run script/setup-fop.sh first)
+  binary_path: "./bin/abt-fop-container"
 
   # Debian trixie
-  # binary_path: "/usr/bin/fop"
+  # binary_path: "./script/abt-fop"
