--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -7,8 +7,5 @@ company:
   vat_id: ATUxxxxxxx
 
 fop:
-  # Wrapper for macOS using Podman (run script/setup-fop.sh first)
-  binary_path: "./bin/fop"
-
-  # Debian trixie
-  # binary_path: "/usr/bin/fop"
+  # (run script/setup-fop.sh first)
+  binary_path: "./bin/abt-fop-container"
