--- a/.github/workflows/auto-approve-merge.yml
+++ b/.github/workflows/auto-approve-merge.yml
@@ -13,7 +13,7 @@ jobs:
     if: |
       github.event.issue.pull_request &&
       github.event.comment.body == '/approve' &&
-      github.event.comment.author_association == 'OWNER'
+      github.event.comment.author_association == 'MEMBER'
     runs-on: ubuntu-latest
 
     steps:
