Revert 4177241972b6442ef5ecc88a8c51aeceb744eb2c

--- a/test/fixtures/customers.yml
+++ b/test/fixtures/customers.yml
@@ -7,6 +7,7 @@ good_eu:
     European Union
   vat_id: EU99999999
   notes: MyText
+  email: customer@good-company.co.uk
   sales_tax_customer_class: eu
   active: true
 
@@ -19,6 +20,7 @@ good_national:
     NATIONAL COUNTRY
   vat_id: NAT9999999
   notes:
+  email: billing@local-company.com
   sales_tax_customer_class: national
   active: true
 
@@ -30,6 +32,7 @@ auto_email_customer:
     12345 Email City
     EMAIL COUNTRY
   vat_id: AUTO123456
+  email: customer@autoemail.com
   invoice_email_auto_enabled: true
   invoice_email_auto_to: billing@autoemail.com
   invoice_email_auto_subject_template: "Invoice $CUST_ORDER$ - Ref: $CUST_REF$"
