/approve: use "merge" strategy to merge

--- a/.github/workflows/auto-approve-merge.yml
+++ b/.github/workflows/auto-approve-merge.yml
@@ -126,7 +126,7 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 pull_number: context.issue.number,
-                merge_method: 'squash'
+                merge_method: 'merge'
               });
             } catch (error) {
               await github.rest.issues.createComment({
